# OOP

./: CMakeLists.txt  README.md
BigIntGoogleTests/: BigIntTests.cpp  CMakeLists.txt
T4/: CMakeLists.txt
T4/src/: CSVParser.cpp  CSVParser.h  exceptions.h  main.cpp  turple_printer.h
src/: BigInt.cpp  Binary.cpp  CMakeLists.txt  Divider.cpp  LogicalAnalyzer.cpp  Multiplier.cpp  StringManager.cpp  Subtractor.cpp  Summator.cpp  big_int.h  constants.h  math_machine.h
