project(Google_tests)

include(FetchContent)

FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
FetchContent_MakeAvailable(googletest)
add_library(GTest::GTest INTERFACE IMPORTED)
target_link_libraries(GTest::GTest INTERFACE gtest_main)

add_executable(BigIntTests BigIntTests.cpp)

target_link_libraries(
        BigIntTests
        PRIVATE
        GTest::GTest
        bigInt
)

add_test(BigIntGTests BigIntTests)
